--- a/package.json
+++ b/package.json
@@ -1,63 +1,63 @@
 {
-	"name": "electron-playground",
-	"version": "1.0.0",
-	"description": "",
-	"main": "dist/index.js",
-	"scripts": {
-		"build": "npm-run-all clean copy build:*",
-		"build:sass": "npm-run-all build:sass:*",
-		"build:sass:common": "sass src/common/sass:dist/common/css",
-		"build:sass:default": "sass src/modules/template:dist/modules/template",
-		"build:sass:about": "sass src/modules/about:dist/modules/about",
-		"build:ts": "tsc",
-		"dev": "npm-run-all development",
-		"development": "electron ./dist/index.js -d --template-dir=./template",
-		"clean": "npx rimraf dist",
-		"copy": "npm-run-all --parallel copy:*",
-		"copy:html": "copyfiles -u 1 ./src/**/*.html dist",
-		"copy:svg": "copyfiles -u 1 ./src/**/*.svg dist",
-		"copy:png": "copyfiles -u 1 ./src/**/*.png dist",
-		"copy:jpg": "copyfiles -u 1 ./src/**/*.jpg dist",
-		"copy:js": "copyfiles -u 1 ./src/**/*.js dist",
-		"lint": "eslint -c .eslintrc --ext .ts ./src",
-		"start": "electron ./dist/index.js --template-dir=./template",
-		"watch:html": "onchange \"src/**/*.html\" -- npm run copy:html",
-		"watch:sass": "npm-run-all --parallel watch:sass:*",
-		"watch:sass:common": "sass --watch src/common/sass:dist/common/css",
-		"watch:sass:default": "sass --watch src/modules/template:dist/modules/template",
-		"watch:sass:about": "sass --watch src/modules/about:dist/modules/about",
-		"watch:svg": "onchange \"src/**/*.svg\" -- npm run copy:svg",
-		"watch:png": "onchange \"src/**/*.png\" -- npm run copy:png",
-		"watch:jpg": "onchange \"src/**/*.jpg\" -- npm run copy:jpg",
-		"watch:js": "onchange \"src/**/*.js\" -- npm run copy:js",
-		"watch:ts": "tsc -w & nodemon -q -w ./src/**/* ./dist",
-		"watch": "npm-run-all --parallel watch:*"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/ElCapitanSponge/electron-playground.git"
-	},
-	"author": "Andrew Brunker",
-	"license": "Apache-2.0",
-	"bugs": {
-		"url": "https://github.com/ElCapitanSponge/electron-playground/issues"
-	},
-	"homepage": "https://github.com/ElCapitanSponge/electron-playground#readme",
-	"devDependencies": {
-		"browserify": "^17.0.0",
-		"copyfiles": "^2.4.1",
-		"eslint": "^8.46.0",
-		"nodemon": "^3.0.1",
-		"npm-run-all": "^4.1.5",
-		"onchange": "^7.1.0",
-		"rxjs": "^7.8.1",
-		"sass": "^1.64.2",
-		"typescript": "^5.1.6",
-		"utf-8-validate": "^6.0.3",
-		"zod": "^3.21.4"
-	},
-	"dependencies": {
-		"electron": "^25.4.0",
-		"express": "^4.18.2"
-	}
+  "name": "electron-playground",
+  "version": "1.0.0",
+  "description": "<a name=\"readme-top\"></a>\r <div align=\"center\">\r     <!-- CONTRIBUTORS -->\r     <a href=\"https://github.com/ElCapitanSponge/electron-playground/graphs/contributors\">\r         <img alt=\"GitHub Contributors\" src=\"https://img.shields.io/github/contributors/ElCapitanSponge/electron-playground\">\r     </a>\r     <!-- FORKS -->\r     <a href=\"https://github.com/ElCapitanSponge/electron-playground/network/members\">\r         <img alt=\"GitHub forks\" src=\"https://img.shields.io/github/forks/ElCapitanSponge/electron-playground\">\r     </a>\r     <!-- STARS -->\r     <a href=\"https://github.com/ElCapitanSponge/electron-playground/stargazers\">\r         <img alt=\"GitHub Repo stars\" src=\"https://img.shields.io/github/stars/ElCapitanSponge/electron-playground\">\r     </a>\r     <!-- ISSUES -->\r     <a href=\"https://github.com/ElCapitanSponge/electron-playground/issues\">\r         <img alt=\"GitHub issues\" src=\"https://img.shields.io/github/issues/ElCapitanSponge/electron-playground\">\r     </a>\r     <!-- PULL REQUESTS -->\r     <a href=\"https://github.com/ElCapitanSponge/electron-playground/pulls\">\r         <img alt=\"GitHub pull requests\" src=\"https://img.shields.io/github/issues-pr/ElCapitanSponge/electron-playground\">\r     </a>\r     <!-- LICENSE -->\r     <a href=\"https://github.com/ElCapitanSponge/electron-playground/blob/master/LICENSE\">\r         <img alt=\"GitHub\" src=\"https://img.shields.io/github/license/ElCapitanSponge/electron-playground\">\r     </a>\r </div>\r <br />\r <div align=\"center\">\r     <h1 align=\"center\">\r         Electron Playground\r     </h1>\r     <h4 align=\"center\">\r         Playground repo for testing features for electron application development\r     </h4>\r     <a href=\"https://github.com/ElCapitanSponge/electron-playground/issues/new\">Report Bug</a>\r     ·\r     <a href=\"https://github.com/ElCapitanSponge/electron-playground/issues/new\">Request Feature</a>\r </div>",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "npm-run-all clean copy build:*",
+    "build:sass": "npm-run-all build:sass:*",
+    "build:sass:common": "sass src/common/sass:dist/common/css",
+    "build:sass:default": "sass src/modules/template:dist/modules/template",
+    "build:sass:about": "sass src/modules/about:dist/modules/about",
+    "build:ts": "tsc",
+    "dev": "npm-run-all development",
+    "development": "electron ./dist/index.js -d --template-dir=./template",
+    "clean": "npx rimraf dist",
+    "copy": "npm-run-all --parallel copy:*",
+    "copy:html": "copyfiles -u 1 ./src/**/*.html dist",
+    "copy:svg": "copyfiles -u 1 ./src/**/*.svg dist",
+    "copy:png": "copyfiles -u 1 ./src/**/*.png dist",
+    "copy:jpg": "copyfiles -u 1 ./src/**/*.jpg dist",
+    "copy:js": "copyfiles -u 1 ./src/**/*.js dist",
+    "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "start": "electron ./dist/index.js --template-dir=./template",
+    "watch:html": "onchange \"src/**/*.html\" -- npm run copy:html",
+    "watch:sass": "npm-run-all --parallel watch:sass:*",
+    "watch:sass:common": "sass --watch src/common/sass:dist/common/css",
+    "watch:sass:default": "sass --watch src/modules/template:dist/modules/template",
+    "watch:sass:about": "sass --watch src/modules/about:dist/modules/about",
+    "watch:svg": "onchange \"src/**/*.svg\" -- npm run copy:svg",
+    "watch:png": "onchange \"src/**/*.png\" -- npm run copy:png",
+    "watch:jpg": "onchange \"src/**/*.jpg\" -- npm run copy:jpg",
+    "watch:js": "onchange \"src/**/*.js\" -- npm run copy:js",
+    "watch:ts": "tsc -w & nodemon -q -w ./src/**/* ./dist",
+    "watch": "npm-run-all --parallel watch:*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ElCapitanSponge/electron-playground.git"
+  },
+  "author": "Andrew Brunker",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/ElCapitanSponge/electron-playground/issues"
+  },
+  "homepage": "https://github.com/ElCapitanSponge/electron-playground#readme",
+  "devDependencies": {
+    "browserify": "^17.0.0",
+    "copyfiles": "^2.4.1",
+    "electron": "^26.0.0",
+    "eslint": "^8.46.0",
+    "nodemon": "^3.0.1",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "rxjs": "^7.8.1",
+    "sass": "^1.64.2",
+    "typescript": "^5.1.6",
+    "utf-8-validate": "^6.0.3",
+    "zod": "^3.21.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
